overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   min-height: 100vh;
   width: 100%;
   display: flex;
@@ -103,7 +104,6 @@
 .button-outline {
   background-color: var(--light-color);
   color: var(--text-accent-color);
-
 }
 .tomato-img-container,
 .lettuce-img-container {
@@ -346,9 +346,7 @@ input:focus {
   margin-left: 1rem;
 }
 
-
 /* ---------media querries--------- */
-
 
 @media screen and (max-width: 800px) {
   .header-wrapper {
